test/types/string/psahabu/string_bounds_checking.good
hello
string_bounds_checking.chpl:3: error: halt reached - index 100 out of bounds for string with length 5
